--- a/README.adoc
+++ b/README.adoc
@@ -28,10 +28,11 @@
 NOTE: This repository contains the guide documentation source. To view the guide in published form, view it on the https://openliberty.io/guides/{projectid}.html[Open Liberty website].
 
 
-You’ll explore how to manage the impact of failures using MicroProfile and Istio Fault Tolerance by adding retry and fallback behavior to microservice dependencies.
+Explore how to manage the impact of failures using MicroProfile and Istio Fault Tolerance by adding retry and fallback behavior to microservice dependencies.
 
 :kube: Kubernetes
-:hashtag: #
+:istio: Istio
+
 
 // =================================================================================================
 // Introduction
@@ -40,8 +41,50 @@ You’ll explore how to manage the impact of failures using MicroProfile and Ist
 == What you'll learn
 
 
-Explore how to use https://microprofile.io/[MicroProfile^] Retry and Fallback policies with https://istio.io/[Istio^] Retry 
+You will learn how to combine https://microprofile.io/[MicroProfile^] Retry and Fallback policies with https://istio.io/[Istio^] Retry 
 to make your microservices more resilient to common failures like network problems or an `IOException`.
+
+Microservices that are created using MicroProfile can be freely deployed in a service mesh architecture to reduce the complexity 
+associated with microservice functionality. Istio is a service mesh, meaning that it’s a platform for managing how microservices interact with each other and the outside world.
+{istio} consists of a control plane and sidecars that are injected into application pods. The sidecars contain
+the https://www.envoyproxy.io/[Envoy^] proxy. You can think of Envoy as a sidecar that intercepts
+and controls all the HTTP and TCP traffic to and from your container.
+If you would like to learn more about Istio, check out the https://openliberty.io/guides/istio-intro.html[Managing microservice traffic using Istio^] guide.
+
+MicroProfile and Istio both provide simple and flexible solutions to build fault-tolerant microservices. 
+Fault tolerance leverages different strategies to guide the execution and result of logic.
+A few fault tolerance policies that MicroProfile can offer include Retry, Timeout, Circuit Breaker, Bulkhead, and Fallback.
+There is some overlap that exists between MicroProfile and Istio Fault Tolerance, such as the Retry policy.
+However, Istio does not offer any fallback capabilities.
+To view the available fault tolerance policies in MicroProfile and Istio, refer to the 
+https://www.eclipse.org/community/eclipse_newsletter/2018/september/MicroProfile_istio.php#faulttolerance[comparison between MicroProfile and Istio fault handling].
+
+Use the Retry policy to fail quickly and recover from brief intermittent issues. 
+An application might experience these transient failures when a microservice is undeployed, a database is overloaded by queries, 
+the network connection becomes unstable, or the site host has a brief downtime. In these cases, rather than failing quickly on these transient failures, 
+the Retry policy provides another chance for the request to succeed. 
+Simply retrying the request might be all you need to do to make it succeed.
+
+Fallback offers an alternative result when an execution does not complete successfully.
+You will use the `@Fallback` annotations from the MicroProfile Fault Tolerance specification to define criteria 
+for when to provide an alternative solution for a failed execution.
+
+You will create a microservice ecosystem demonstrating MicroProfile Fault Tolerance with Istio fault handling.
+Both libraries can be enabled when you want your microservices to have a service mesh architecture with Istio, 
+and use MicroProfile to provide the extra fault tolerance policies that do not exist within Istio.
+However, microservices that have the same fault tolerance policy enabled by both MicroProfile and Istio will
+have a behaviour that is not as expected. 
+
+The application that you will be working with is an `inventory` service, which collects, stores, and returns the system properties. 
+It uses the `system` service to retrieve the system properties for a particular host. 
+You will add fault tolerance to the `inventory` service so that it reacts accordingly when the `system` service is unavailable.
+
+
+// =================================================================================================
+// Prerequisites
+// =================================================================================================
+
+== Prerequisites
 
 
 // =================================================================================================
@@ -50,6 +93,19 @@ to make your microservices more resilient to common failures like network proble
 
 [role='command']
 include::{common-includes}/gitclone.adoc[]
+
+// =================================================================================================
+// Deploying Istio
+// =================================================================================================
+
+== Deploying Istio
+
+// =================================================================================================
+// Enabling MicroProfile fault tolerance
+// =================================================================================================
+
+== Enabling MicroProfile fault tolerance
+
 
 // =================================================================================================
 // finish
