--- a/README.adoc
+++ b/README.adoc
@@ -22,7 +22,7 @@
 :page-seo-title: Retry and Fallback with MicroProfile and Istio Fault Tolerance
 :page-seo-description: How to retry services and add fallback behaviour with MicroProfile and Istio Fault Tolerance
 :guide-author: Open Liberty
-= Building fault-tolerant microservices using Istio Retry with Microprofile Fallback
+= Building fault-tolerant microservices using Istio Retry with MicroProfile Fallback
 
 [.hidden]
 NOTE: This repository contains the guide documentation source. To view the guide in published form, view it on the https://openliberty.io/guides/{projectid}.html[Open Liberty website].
@@ -198,12 +198,10 @@ Next, the [hotspot file=2]`SystemClient.java` file
 makes a request to the `system` service through the MicroProfile Rest Client API.
 If you want to learn more about MicroProfile Rest Client,
 you can follow the https://openliberty.io/guides/microprofile-rest-client.html[Consuming RESTful services with template interfaces^] guide.
-To simulate that your `system` service is temporarily down, due to brief intermittent issues, any requests made to your `system` service 
-have to wait for a long time. A [hotspot=timeout file=3]`Timeout` policy was applied to limit the time your `inventory` service's request 
-to your `system` service waits to 2000 milliseconds. 
-The `@Timeout` annotation helps by ending requests that have taken too long and are unlikely to return successfully.
-
-
+To simulate that your `system` service is temporarily down, due to brief intermittent issues, you will pause the pod that is associated
+with your `system` service, and try to send requests to the service. When the `system` pod is paused, requests to the service return a `500` status code.
+The [hotspot=getPropertiesHelper file=2]`getPropertiesHelper()` in [hotspot file=2]`SystemClient.java` checks for status codes that are not OK, 
+i.e. the status code is not `200`, and throws an [hotspot=throwIO file=2]`IOException`. 
 
 
 pom.xml
@@ -222,12 +220,6 @@ SystemClient.java
 [source, java, linenums, role='code_column']
 ----
 include::finish/inventory/src/main/java/io/openliberty/guides/inventory/client/SystemClient.java[tags=**;!copyright]
-----
-
-InventoryResource.java
-[source, java, linenums, role='code_column']
-----
-include::finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[tags=**;!copyright]
 ----
 
 === Building and running the application
@@ -277,7 +269,7 @@ To deploy your microservices to the Kubernetes cluster, use the following comman
 
 [role=command]
 ```
-kubectl apply -f kubernetes.yaml
+kubectl apply -f istio.yaml
 ```
 
 You will see an output similar to the following:
@@ -300,14 +292,29 @@ Deploy the resources defined in the `traffic.yaml` file
 kubectl apply -f traffic.yaml
 ```
 
-Check that all of the deployments are available:
+Run the following command to check the status of your pods:
+
+[role=command]
+```
+kubectl get pods
+```
+
+If all the pods are healthy and running, you will see an output similar to the following:
+
+[source, role="no_copy"]
+----
+NAME                                    READY     STATUS    RESTARTS   AGE
+inventory-deployment-645767664f-nbtd9   1/1       Running   0          30s
+system-deployment-6bd97d9bf6-4ccds      1/1       Running   0          30s
+----
+
+Check that all of the deployments are available. You need to wait until all of your deployments are 
+ready and available before making requests to your microservices.
 
 [role=command]
 ```
 kubectl get deployments
 ```
-
-Wait until all of your deployments are ready and available before making requests to your microservices.
 
 [source, role="no_copy"]
 ----
@@ -315,6 +322,14 @@ NAME                     READY     UP-TO-DATE   AVAILABLE   AGE
 inventory-deployment     1         1            1           1m
 system-deployment        1         1            1           1m
 ----
+
+Pause the `system` service pod to simulate that the service is unavailable. Replace `[system-pod-name]` with the pod name associated with
+your `system` service, which you previously saw when running the `kubectl get pods` command.
+
+[role=command]
+```
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+```
 
 You will make a request to the `system` service from the `inventory` service to access the 
 JVM system properties of your running container. The Istio [hotspot=gateway file=0]`gateway` is the entry point for HTTP requests to the cluster. 
@@ -353,13 +368,12 @@ server: istio-envoy
 ----
 
 The request returns a `500` response code, as the `system` service is unavailable.
-This is because the request timed out and the `@Timeout` annotation returned a `TimeoutException`.
-You will implement a Retry policy to retry the request to the `system` service. 
+You will implement a Retry policy to retry the requests to the `system` service. 
 
-kubernetes.yaml
+istio.yaml
 [source, yaml, linenums, role='code_column']
 ----
-include::finish/kubernetes.yaml[]
+include::finish/istio.yaml[]
 ----
 
 
@@ -373,7 +387,7 @@ You can set limits on the number of retry attempts to prevent a busy service fro
 The `@Retry` annotation has the `maxRetries` parameter to limit the number of retry attempts. The default number for `maxRetries` is 3 requests.
 The integer value must be greater than or equal to -1. A value of -1 indicates to continue retrying indefinitely.
 
-To retry the requests to your `system` service after a `TimeoutException` has occurred, add the `@Retry` annotation.
+To retry the requests to your `system` service after an `IOException` has occurred, add the `@Retry` annotation.
 
 [role="code_command hotspot", subs="quotes"]
 ----
@@ -387,23 +401,37 @@ include::finish/inventory/src/main/java/io/openliberty/guides/inventory/Inventor
 ----
 [role="edit_command_text"]
 Add the [hotspot=mpRetry file=0]`@Retry` annotation before the [hotspot=getPropertiesForHost file=0]`getPropertiesForHost()` method, 
-to retry the service request a maximum of 3 times, only when an `TimeoutException` occurs.
+to retry the service request a maximum of 3 times, only when an `IOException` occurs.
+
+If the resources in your cluster are still running from before, delete them before proceeding:
+
+[role=command]
+```
+kubectl delete -f istio.yaml
+kubectl delete -f traffic.yaml
+```
 
 Rebuild your application to integrate the Retry policy into your microservices:
 
 [role=command]
 ```
-mvn package -Ddockerfile.skip=true
+mvn package
 ```
 
-The `dockerfile.skip=true` flag skips rebuilding the Docker images, since they were not modified.
-
-Deploy your microservices again:
+Deploy your microservices again, and wait until all of your deployments are ready and available:
 
 [role=command]
 ```
-kubectl apply -f kubernetes.yaml
+kubectl apply -f istio.yaml
 kubectl apply -f traffic.yaml
+```
+
+Pause the `system` service pod to simulate that the service is unavailable. Replace `[system-pod-name]` with the pod name associated with
+your `system` service.
+
+[role=command]
+```
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
 ```
 
 Make a request to the service by using `curl`:
@@ -426,25 +454,32 @@ curl -H Host:inventory.example.com http://`minikube ip`:31380/inventory/systems/
 ```
 ****
 
-You will see the following output:
+You will see that the request still returns a `500` response code, as the `system` service is unavailable.
+This time however, the request was retried several times before failing.
 
-[source, role="no_copy"]
-----
-HTTP/1.1 200 OK
-x-powered-by: Servlet/4.0
-content-type: application/json
-date: Thu, 15 Aug 2019 13:23:18 GMT
-content-language: en-US
-x-envoy-upstream-service-time: 2470
-server: istio-envoy
-transfer-encoding: chunked
-----
+To see the number of times that the service was retried, check the logs of the `system` pod using the `kubectl logs` command.
+Remember to replace `[system-pod-name]` with the pod name associated with your `system` service.
 
-After the request retries, the `system` service becomes available and the request is successful with a `200` response code.
+****
+[system]#*{mac} | {linux}*#
 
-To see the number of times the service was retried:
 
-IN PROGRESS
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | grep -c system-service:9080
+```
+
+[system]#*{win}*#
+
+
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | find /C "system-service:9080"
+```
+****
+
+The above command returns 4, since there were a total of 4 requests made to the `system` service,
+including the initial request and the 3 retries that were made after the initial request failed. 
 
 
 // =================================================================================================
@@ -453,10 +488,16 @@ IN PROGRESS
 
 == Enabling Istio fault tolerance
 
-As mentioned before, you will add Istio fault handling to your microservices.
-
 You previously implemented the Retry policy to retry requests to your `system` service using MicroProfile Fault Tolerance.
 This Retry policy can also be implemented with Istio fault tolerance.
+
+If the resources in your cluster are still running from before, delete them before proceeding:
+
+[role=command]
+```
+kubectl delete -f istio.yaml
+kubectl delete -f traffic.yaml
+```
 
 [role="code_command hotspot", subs="quotes"]
 ----
@@ -466,32 +507,342 @@ This Retry policy can also be implemented with Istio fault tolerance.
 finish/traffic.yaml
 [source, yaml, linenums, role='code_column']
 ----
-include::finish/traffic.yaml[tags=**;!copyright]
+include::finish/traffic.yaml[]
 ----
 [role="edit_command_text"]
-Add the [hotspot=istioRetry file=0]`retries` field in the [hotspot]`traffic.yaml` file, 
+Add the [hotspot=istioRetry file=0]`retries` field in the [hotspot file=0]`traffic.yaml` file, to allow Istio to
+retry requests to the `system` service a maximum of 2 times, when the request returns any `5xx` response code. 
+
+The [hotspot=attempts file=0]`attempts` field is required in the configuration of Istio's Retry policy, and it indicates the
+maximum number of retries that will be attempted for a given request. To retry a request on specific conditions, the
+[hotspot=retryOn file=0]`retryOn` field is used. Since your paused `system` service responds with a `500` response code, 
+you set [hotspot=retryOn file=0]`retryOn` to be `5xx`. 
+Other https://www.envoyproxy.io/docs/envoy/latest/configuration/http_filters/router_filter#x-envoy-retry-on[retry conditions^] 
+can also be specified in [hotspot=retryOn file=0]`retryOn`. An optional field that can be provided to Istio's Retry policy
+is `perTryTimeout`, which indicates the amount of time that is allocated to each retry attempt. 
+
+After integrating an Istio Retry policy into your microservices, deploy your microservices again, 
+and wait until all of your deployments are ready and available:
+
+[role=command]
+```
+kubectl apply -f istio.yaml
+kubectl apply -f traffic.yaml
+```
+
+Pause the `system` service pod to simulate that the service is unavailable. Replace `[system-pod-name]` with the pod name associated with
+your `system` service.
+
+[role=command]
+```
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+```
+
+Make a request to the service by using `curl`:
+
+****
+[system]#*{win} | {mac}*#
 
 
+[role=command]
+```
+curl -H Host:inventory.example.com http://localhost/inventory/systems/system-service -I
+```
 
-=== Conflicts with MP Retry and Istio Retry
+[system]#*{linux}*#
 
 
-=== Turning off MicroProfile Fault Tolerance
+[role=command]
+```
+curl -H Host:inventory.example.com http://`minikube ip`:31380/inventory/systems/system-service -I
+```
+****
 
-Add config to kubernetes.yaml:
+You will see that the request still returns a `500` response code, as the `system` service is unavailable.
+This time however, the request was retried several times with Istio before failing.
 
-Disable mp:
+To see the number of times that the service was retried, check the logs of the `system` pod using the `kubectl logs` command.
+Remember to replace `[system-pod-name]` with the pod name associated with your `system` service.
+
+****
+[system]#*{mac} | {linux}*#
+
+
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | grep -c system-service:9080
+```
+
+[system]#*{win}*#
+
+
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | find /C "system-service:9080"
+```
+****
+
+The above command returns 12, indicating that a total of 12 requests are made to the `system` service.
+However, you enabled Istio to retry a maximum of 2 times, and hence the total number of requests to the `system` service should be 3.
+This is because the number of retries set by MicroProfile conflicts with the number of retries set by Istio.
+To prevent this behaviour, you will disable some of MicroProfile's capabilities, including Retry, to have your `system` service 
+retry the exact number of times indicated in Istio's Retry policy. 
+
+
+// =================================================================================================
+// Turning off MicroProfile Fault Tolerance except Fallback
+// =================================================================================================
+
+== Turning off MicroProfile Fault Tolerance except Fallback
+
+=== Conflict with MicroProfile Retry and Istio Retry
+
+When microservices have the same fault tolerance policy enabled by both MicroProfile and Istio, the behaviour of the policy is not as expected. 
+As you have seen before, if both MicroProfile and Istio set their own Retry policies on a service,
+the maximum number of retries that occur is not equivalent to either of the number of retries specified in MicroProfile or Istio. 
+The microservice actually multiplies the number of MicroProfile and Istio retries. For instance, you set MicroProfile to perform 3 retries,
+and Istio to perform 2 retries, however you noticed using `kubectl logs` that a total of 12 requests were made to the `system` service.
+Individually, MicroProfile would have sent a total of 4 requests, including the initial request and 3 retries. Without MicroProfile,
+Istio would have sent a total of 3 requests, including the initial request and 2 retries. When both retry policies are enabled,
+the 4 requests by MicroProfile are multiplied by the 3 requests by Istio, causing a total of 12 requests.
+
+In the case that you want your microservices to use a service-mesh architecture, such as Istio, and use it's fault handling without interfering with
+the service's MicroProfile properties, you can use a config property offered by MicroProfile.
+      
+=== Setting the MP_Fault_Tolerance_NonFallback_Enabled config property
+
+MicroProfile Fault Tolerance offers a config property `MP_Fault_Tolerance_NonFallback_Enabled` that disables all 
+MicroProfile Fault Tolerance capabilities except fallback. If `MP_Fault_Tolerance_NonFallback_Enabled` is set to false, all of the MicroProfile
+annotations, including `@Retry`, will switch off and only keep `@Fallback` available to use.
+
+You will use the `MP_Fault_Tolerance_NonFallback_Enabled` config property to disable the retries performed by MicroProfile, 
+to only allow Istio to perform the retries.
+
+[role="code_command hotspot file=0", subs="quotes"]
+----
+#Create the `config.yaml`.#
+`config.yaml`
+----
+
+config.yaml
+[source, Text, linenums, indent=0, role="code_column"]
+----
+include::finish/config.yaml[]
+----
+
+In the [hotspot file=0]`config.yaml`, the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` config property is set to false in a [hotspot=configMap file=0]`ConfigMap`. 
+ConfigMaps store configuration settings about a Kubernetes pod. This configuration needs to be loaded into the pod as an environment variable to be 
+used by the pod's containers. The environment variables are defined in the pod's specification using the `envFrom` field. 
+
+[role="code_command hotspot", subs="quotes"]
+----
+#Update the `istio.yaml` file.#
+`istio.yaml`
+----
+finish/istio.yaml
+[source, yaml, linenums, role='code_column']
+----
+include::finish/istio.yaml[]
+----
+[role="edit_command_text"]
+To inject the [hotspot=configMap file=0]`ConfigMap` with the [hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` property into your pods, 
+add the [hotspot=invConfig file=1]`envFrom` field in the [hotspot file=1]`istio.yaml` file. 
+
+The [hotspot=configName file=0]`name` of the [hotspot=configMap file=0]`ConfigMap`, which is [hotspot=configName file=0]`inventory-config`, 
+becomes the environment variable [hotspot=configName2 file=1]`name` that is specified in the [hotspot=invConfig file=1]`envFrom` field. 
+
+If the resources in your cluster are still running from before, delete them before proceeding:
+
+[role=command]
+```
+kubectl delete -f istio.yaml
+kubectl delete -f traffic.yaml
+```
+
+Deploy your microservices again, and wait until all of your deployments are ready and available:
+
+[role=command]
+```
+kubectl apply -f istio.yaml
+kubectl apply -f traffic.yaml
+```
+
+Turn off all MicroProfile capabilities, except fallback, by creating the [hotspot=configMap file=0]`ConfigMap` in [hotspot file=0]`config.yaml`:
 
 [role=command]
 ```
 kubectl apply -f config.yaml
 ```
 
+Pause the `system` service pod to simulate that the service is unavailable. Replace `[system-pod-name]` with the pod name associated with
+your `system` service.
+
+[role=command]
+```
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+```
+
+Make a request to the service by using `curl`:
+
+****
+[system]#*{win} | {mac}*#
+
+
+[role=command]
+```
+curl -H Host:inventory.example.com http://localhost/inventory/systems/system-service -I
+```
+
+[system]#*{linux}*#
+
+
+[role=command]
+```
+curl -H Host:inventory.example.com http://`minikube ip`:31380/inventory/systems/system-service -I
+```
+****
+
+You will see that the request still returns a `500` response code, as the `system` service is unavailable.
+This time however, the request was retried several times with Istio, without any retries from MicroProfile.
+
+To see the number of times that the service was retried, check the logs of the `system` pod using the `kubectl logs` command.
+Remember to replace `[system-pod-name]` with the pod name associated with your `system` service.
+
+****
+[system]#*{mac} | {linux}*#
+
+
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | grep -c system-service:9080
+```
+
+[system]#*{win}*#
+
+
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | find /C "system-service:9080"
+```
+****
+
+The above command returns 3, indicating that a total of 3 requests are made to the `system` service.
+Since MicroProfile's Retry policy is disabled, only Istio's retries are performed.
+You enabled Istio to retry a maximum of 2 times, and hence the total number of requests to the `system` service is 3.
 
 
 === Adding the MicroProfile @Fallback annotation
 
+Since retrying the requests to your `system` service is still not successful, you need a plan to "fall back" on when the requests fail. 
+You will create a fallback method to deal with the failed requests to your `system` service.
 
+Although you disabled MicroProfile `@Retry` and other MicroProfile Fault Tolerance policies using the 
+[hotspot=nonFallback file=0]`MP_Fault_Tolerance_NonFallback_Enabled` config property, the fallback policy is still available to use.
+As mentioned before, Istio does not offer any fallback capabilities, and so the MicroProfile `@Fallback` annotation must be used 
+to add fallback to your microservices.
+
+The `@Fallback` annotation dictates a method to call when the original method encounters a failed execution. 
+If your microservices have a Retry policy specified, then the fallback occurs after all of the retries have failed. 
+
+[role="code_command hotspot", subs="quotes"]
+----
+#Update the `InventoryResource.java` file.#
+`InventoryResource.java`
+----
+finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java
+[source, java, linenums, role='code_column']
+----
+include::finish/inventory/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[tags=**;!copyright]
+----
+[role="edit_command_text"]
+Create the [hotspot=fallbackMethod file=0]`getPropertiesFallback()` method. 
+Add the [hotspot=fallback file=0]`@Fallback` annotation before the [hotspot=getPropertiesForHost file=0]`getPropertiesForHost()` method, 
+to call the [hotspot=fallbackMethod file=0]`getPropertiesFallback()` method when a failure occurs.
+
+
+The [hotspot=fallbackMethod file=0]`getPropertiesFallback()` method, which is the designated fallback method for the original 
+[hotspot=getPropertiesForHost file=0]`getPropertiesForHost()` method, prints out a warning message in the browser saying that 
+the `system` service may not be running.
+
+If the resources in your cluster are still running from before, delete them before proceeding:
+
+[role=command]
+```
+kubectl delete -f istio.yaml
+kubectl delete -f traffic.yaml
+```
+
+Deploy your microservices again, and wait until all of your deployments are ready and available:
+
+[role=command]
+```
+kubectl apply -f istio.yaml
+kubectl apply -f traffic.yaml
+```
+
+Turn off all MicroProfile capabilities, except fallback, by creating the [hotspot=configMap file=0]`ConfigMap` in [hotspot file=0]`config.yaml`:
+
+[role=command]
+```
+kubectl apply -f config.yaml
+```
+
+Pause the `system` service pod to simulate that the service is unavailable. Replace `[system-pod-name]` with the pod name associated with
+your `system` service.
+
+[role=command]
+```
+kubectl exec -it [system-pod-name] /opt/ol/wlp/bin/server pause
+```
+
+Make a request to the service by using `curl`:
+
+****
+[system]#*{win} | {mac}*#
+
+
+[role=command]
+```
+curl -H Host:inventory.example.com http://localhost/inventory/systems/system-service -I
+```
+
+[system]#*{linux}*#
+
+
+[role=command]
+```
+curl -H Host:inventory.example.com http://`minikube ip`:31380/inventory/systems/system-service -I
+```
+****
+
+You will see that the request is now successful and returns a `200` response code, since the fallback method is called 
+when the `system` service is not available.
+
+
+To see the number of times that the service is retried before the fallback method is called, check the logs of the `system` pod using the `kubectl logs` command.
+Remember to replace `[system-pod-name]` with the pod name associated with your `system` service.
+
+****
+[system]#*{mac} | {linux}*#
+
+
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | grep -c system-service:9080
+```
+
+[system]#*{win}*#
+
+
+[role=command]
+```
+kubectl logs [system-pod-name] -c istio-proxy | find /C "system-service:9080"
+```
+****
+
+The above command returns 3, indicating that a total of 3 requests are made to the `system` service.
+You enabled Istio to retry a maximum of 2 times, and hence the total number of requests to the `system` service is 3.
+However, since all of these requests failed, the fallback method [hotspot=fallbackMethod file=0]`getPropertiesFallback()` is called. 
 
 // =================================================================================================
 // Testing the microservices
@@ -499,21 +850,10 @@ kubectl apply -f config.yaml
 
 == Testing the microservices
 
-[role="code_command hotspot", subs="quotes"]
-----
-#Create the `SystemEndpointTest` class.#
-`system/src/test/java/it/io/openliberty/guides/system/SystemEndpointTest.java`
-----
-SystemEndpointTest.java
-[source, Java, linenums, role='code_column']
-----
-include::finish/system/src/test/java/it/io/openliberty/guides/system/SystemEndpointTest.java[tags=**;!copyright]
-----
+Run the command to start the tests:
 
 ****
 [system]#*{win} | {mac}*#
-
-Run the command to start the tests:
 
 [role=command]
 ```
@@ -521,8 +861,6 @@ mvn verify -Ddockerfile.skip=true
 ```
 
 [system]#*{linux}*#
-
-Run the command to start the tests:
 
 [role=command]
 ```
@@ -550,7 +888,6 @@ Tests run: 3, Failures: 0, Errors: 0, Skipped: 0
 ----
 
 
-
 // =================================================================================================
 // Tearing down your environment
 // =================================================================================================
@@ -563,7 +900,7 @@ Delete your resources from the cluster.
 
 [role=command]
 ```
-kubectl delete -f kubernetes.yaml
+kubectl delete -f istio.yaml
 kubectl delete -f traffic.yaml
 kubectl delete -f config.yaml
 ```
